--- a/ProyectoModuloPOO/src/main/resources/application.properties
+++ b/ProyectoModuloPOO/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=ProyectoModulo
+spring.application.name=ProyectoModuloPOO
+
 server.port=${SERVER_PORT}
 spring.datasource.url=${BD_URL}
 spring.datasource.username=${BD_USERNAME}
