--- a/ProyectoModuloPOO/pom.xml
+++ b/ProyectoModuloPOO/pom.xml
@@ -64,6 +64,27 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!--Dependecia para agregar anotaciones como @Getter y @Setter-->
+		<!--Instala posteriormente el plugin de Lombok para poder utilizar los metodos
+        Getter y Setter: File > Settings > Plugins-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.36</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!--Dependecia para validaciones-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
